docs/errors/examples/param-after-param-block-ends/param-after-param-block-ends.grob
// E4202 — a param declaration placed after a function declaration, outside the param block
// Eventual path: docs/errors/examples/param-after-param-block-ends/param-after-param-block-ends.grob
param {
    outputDir: string := "."
}

fn run(): string {
    return outputDir
}

param {
    verbose: bool := false
}
